--- a/package.json
+++ b/package.json
@@ -52,8 +52,5 @@
   "dependencies": {
     "@iconify/types": "^2.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/KTibow/kreations"
-  }
+  "repository": "KTibow/kreations"
 }
